# qox

./: .gitignore  Cargo.toml  README.md
crates/qox-core/: Cargo.toml
crates/qox-core/examples/: demo.rs  fdm_demo.rs  mod.rs
crates/qox-core/src/: conventions.rs  error.rs  interpolate.rs  lib.rs  period.rs  rate.rs  tenor.rs  yield_curve.rs
crates/qox-core/src/core/: period.rs  rate.rs
crates/qox-core/src/engines/: black.rs  fdm.rs  mod.rs
crates/qox-core/src/evaluators/: fdm.rs  fdm_log.rs  mod.rs
crates/qox-core/src/instruments/: cash.rs  future_option.rs  mod.rs
crates/qox-core/src/market/: mod.rs  rate_curve.rs  vol_surface.rs
crates/qox-core/src/real/: ad_dual.rs  dual2_vec.rs  dual_vec.rs  mod.rs  real.rs  reverse_node.rs
crates/qox-core/src/solvers/: mod.rs
crates/qox-core/src/traits/: boundary.rs  calendar.rs  instrument.rs  mod.rs  pricing_engine.rs  real.rs
crates/qox-core/tests/: period.rs
qox/: Cargo.toml  README.md
qox-python/: Cargo.toml  pyproject.toml  qox.pyi
qox-python/src/: lib.rs
qox-python/src/core/: compounding.rs  day_count.rs  frequency.rs  mod.rs  rate.rs  tenor.rs
qox-python/src/instruments/: mod.rs  stock_option.rs
qox-python/src/market/: market_frame.rs  mod.rs  rate_curve.rs  vol_surface.rs
qox/examples/: analytic_demo.rs  demo.rs  fdm_demo.rs
qox/src/: lib.rs
qox/src/core/: conventions.rs  mod.rs  rate.rs
qox/src/evaluators/: black.rs  fdm.rs  fdm_log.rs  mod.rs
qox/src/evaluators/analytic/: black.rs  mod.rs
qox/src/evaluators/finite_difference/: evaluator.rs
qox/src/instruments/: future_option.rs  mod.rs  stock_option.rs
qox/src/market/: market_data.rs  market_frame.rs  rate_curve.rs  vol_surface.rs
qox/src/math/: interpolate.rs  mod.rs  payoffs.rs
qox/src/methods/: mod.rs
qox/src/methods/analytic/: black_scholes.rs
qox/src/methods/complementarity/: brennan_schwartz.rs  mod.rs  psor.rs
qox/src/methods/constraints/: american.rs  mod.rs  none.rs
qox/src/methods/finite_difference/: mod.rs  operator_old.rs  solver.rs  solver_old.rs  solver_old_old.rs
qox/src/methods/linear_operators/: mod.rs  tridiagonal_operator.rs
qox/src/methods/linear_operators_old/: mod.rs  tridiagonal_operator.rs
qox/src/methods/obstacle_policies/: brennan_schwartz.rs  mod.rs  no_obstacle.rs  post_projection.rs  psor.rs
qox/src/methods/step_policy/: linear_policy.rs  mod.rs  unified_policy.rs
qox/src/methods/time_stepping/: bdf2.rs  butcher_jackiewicz2.rs  crank_nicolson.rs  dimsim2.rs  glm.rs  implicit_euler.rs  mod.rs  sdirk22.rs
qox/src/methods/transforms/: identity.rs  log.rs  mod.rs
qox/src/processes/: black_scholes.rs  mod.rs
qox/src/processes_old/: black_scholes.rs  mod.rs
qox/src/real/: ad_gradient.rs  complex.rs  dual.rs  dual2_vec.rs  dual_array.rs  hyper_dual.rs  mod.rs  num_dual_vec.rs  real.rs  reverse_node.rs
qox/src/solvers/: mod.rs
qox/src/solvers/fdm/: mod.rs  operators_log.rs
qox/src/solvers/finite_difference/: constraints.rs  grid.rs  mod.rs  operator_old.rs  operators.rs  operators_log.rs  solver.rs  (+2 more)
qox/src/traits/: boundary.rs  calendar.rs  constraint.rs  fdm_1d_mesher.rs  fdm_mesher.rs  fdm_process.rs  instrument.rs  linear_operator.rs  market_view.rs  mod.rs  payoff.rs  pricing_engine.rs  rate_curve.rs  real.rs  solver_strategy.rs  time_stepper.rs  transform.rs  vol_surface.rs
qox/src/types/: complex.rs  dual.rs  dual2_vec.rs  dual_array.rs  f64.rs  hyper_dual.rs  mod.rs  num_dual_vec.rs
qox/tests/: period.rs
(+60 files in other folders)
