[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
qox-core = { path = "crates/qox-core" }
qox-autodiff = { path = "crates/qox-autodiff" }
libm = "0.2"
num-dual = "0.13"