[workspace.package]
version = "0.0.1-alpha"
edition = "2024"
authors = ["Bruce Boutelje"]
description = "Quantitative finance library for Rust (Alpha)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bboutelje/qox"
readme = "README.md"
keywords = ["quant", "finance", "trading", "mathematics"]
categories = ["science", "mathematics", "finance", "algorithms"]


[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
qox-core = { path = "crates/qox-core" }
qox-autodiff = { path = "crates/qox-autodiff" }
libm = "0.2"
num-dual = "0.13"
ad_trait = "0.2"
serde = "1.0.228"
