[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "qox"
version = "0.0.1-alpha"
description = "Quantitative finance library for Rust (Alpha)"
readme = "../README.md"
requires-python = ">=3.9"
authors = [{name = "Bruce Boutelje"}]
license = { text = "MIT OR Apache-2.0" }
keywords = ["quant", "finance", "trading", "mathematics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.maturin]
module-name = "qox"
wheel-name = "qox"