[package]
name = "qox"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { workspace = true }
libm = { workspace = true }
thiserror = "1"
simba = "0.9"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
ndarray = "0.17"
num-dual = { workspace = true }
ad_trait = { workspace = true }
serde = { workspace = true }

[[example]]
name = "fdm_demo"
path = "examples/fdm_demo.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"